fixed JDK 1.4 compliance
git-svn-id: https://svn.apache.org/repos/asf/james/server@481875 13f79535-47bb-0310-9956-ffa450edef68